--- a/src/client/app/shared/sidebar/sidebar.html
+++ b/src/client/app/shared/sidebar/sidebar.html
@@ -66,7 +66,7 @@
                     </a>
                 </li>
                 <li *ngIf="viewItemStatistics"> 
-                    <a [routerLink]="['blankpage']" >
+                    <a [routerLink]="['itemstatistics']" >
                         <i class="fa fa-th-list"></i>
                         <span>&nbsp; View Stats</span>
                     </a>
