--- a/src/client/app/shared/sidebar/sidebar.html
+++ b/src/client/app/shared/sidebar/sidebar.html
@@ -47,8 +47,8 @@
                             </a>
                         </li>
                         <li *ngIf="addEmployee || editEmployee || delEmployee"> 
-                            <a [routerLink]="['custservice']" >                                
-                                <span>&nbsp; CustService</span>
+                            <a [routerLink]="['employee']" >                                
+                                <span>&nbsp; Users</span>
                             </a>
                         </li>
                     </ul>
