--- a/src/client/index.html
+++ b/src/client/index.html
@@ -10,6 +10,7 @@
     <!-- inject:css -->
     <!-- endinject -->
     <!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">-->
+<link href="node_modules/ng2-toastr/bundles/ng2-toastr.min.css" rel="stylessheet"/>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
