--- a/src/client/app/shared/sidebar/sidebar.html
+++ b/src/client/app/shared/sidebar/sidebar.html
@@ -51,11 +51,12 @@
                                 <span>Users</span>
                             </a>
                         </li>
+                        <!--
                          <li> 
                                 <a [routerLink]="['reset']" > 
                                     <span>Reset</span>
                                 </a>
-                        </li>
+                        </li>-->
                     </ul>
                 </li>
                  <li *ngIf="viewItemStatistics" class="nested" [ngClass]="{'expand' : showMenu === 'view' }">
@@ -99,11 +100,22 @@
                        </li>                      
                     </ul>
                 </li>       
-                <li *ngIf="viewTransactionHistory" > 
-                                <a [routerLink]="['order']" >
-                                   <i class="fa fa-th-list"></i>
+                <li class="nested" [ngClass]="{'expand' : showMenu === 'order' }"> 
+                    <a (click)="expandOrder('order')"><i *ngIf="!showMenuOrder" class="fa fa-chevron-circle-down"></i><i *ngIf="showMenuOrder" class="fa fa-chevron-circle-up"></i><span>&nbsp; Transactions</span></a>
+                    <ul class="submenu">
+                           <li> 
+                                <a [routerLink]="['home']">
+                                    <span>Orders</span>
+                                </a>
+                          </li>
+                    
+                       <li *ngIf="viewTransactionHistory"> 
+                                 <a [routerLink]="['order']" >
                                     <span>Transaction History</span>
                                 </a>
+                       </li>                      
+                    </ul>
+                               
                 </li>
                 <li>
                     <a [routerLink]="['']"><i class="fa fa-sign-out"></i><span>&nbsp;&nbsp; Logout</span></a>
